Update and rename portfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section class="about">
         <div class="main">
-            <img src="../Portfolio/il1.png" alt="chandhru">
+            <img src="il1.png" alt="chandhru">
             <div class="about-text">
                 <h2>About <span>me</span></h2>
                 <h5>Web <span>Developer</span></h5>
@@ -91,17 +91,17 @@
     <div class="skills-section">
         <h2 class="skills-header">Ski<span>lls</span></h2>
         <div class="skills-left">
-          <img src="../Portfolio/skills2.png" alt="Left Image Description">
+          <img src="skills2.png" alt="Left Image Description">
         </div>
         <div class="skills-right">
-          <img src="../Portfolio/html.png" alt="Skill 1">
-          <img src="../Portfolio/css.png" alt="Skill 2">
-          <img src="../Portfolio/js2.png" alt="Skill 1">
-          <img src="../Portfolio/python.jpg" alt="Skill 2">
-          <img src="../Portfolio/git.png" alt="Skill 7">
-          <img src="../Portfolio/mdb.jpg" alt="Skill 7">
-          <img src="../Portfolio/c.png" alt="Skill 7">
-          <img src="../Portfolio/java.jpg" alt="Skill 7">
+          <img src="html.png" alt="Skill 1">
+          <img src="css.png" alt="Skill 2">
+          <img src="js2.png" alt="Skill 1">
+          <img src="python.jpg" alt="Skill 2">
+          <img src="git.png" alt="Skill 7">
+          <img src="mdb.jpg" alt="Skill 7">
+          <img src="c.png" alt="Skill 7">
+          <img src="java.jpg" alt="Skill 7">
         </div> 
     </div>
       
