--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     </div>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="main">
             <img src="il1.png" alt="chandhru">
             <div class="about-text">
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <div class="projects-section">
+    <div class="projects-section" id="projects">
         <div class="title">
             <h2>Pro<span>jects</span></h2>
         </div>
@@ -88,7 +88,7 @@
     </div>
 
     
-    <div class="skills-section">
+    <div class="skills-section" id="skills">
         <h2 class="skills-header">Ski<span>lls</span></h2>
         <div class="skills-left">
           <img src="skills2.png" alt="Left Image Description">
@@ -105,7 +105,7 @@
         </div> 
     </div>
       
-    <div class="contact-me" style="position: relative;padding-right: 1000px;">
+    <div class="contact-me" style="position: relative;padding-right: 1000px;" id="contact">
         <p style="position: relative;margin-right: 170px;">Cont<span>act</span></p>
         <hr style="position: relative;margin-right:160px;width: 200px;"><br>
         <div style="position: relative;padding-right: 70px;" class="contact-p">
